Fix margins in the header navbar so things are centered on smaller screen sizes

--- a/app/assets/stylesheets/modules/header_navbar.scss
+++ b/app/assets/stylesheets/modules/header_navbar.scss
@@ -29,6 +29,10 @@
     color: $white;
     margin-left: $spacer;
 
+    &:first-child {
+      margin-left: 0;
+    }
+
     &:hover,
     &:focus,
     &:active {
